plugins/globe-medals-widget/medalswidget.css
/* Small Nav version */
.globe-medals-widget .globe-medals-table{
	display:none;
}
.globe-medals-widget .globe-medals-widget{
	float:left;
	width:100%;
	overflow: hidden;
}
.globe-medals-widget .globe-medals-nav{
	font-family:"OpenSans",Arial,sans-serif;
	font-size:10px;
	color:#d7d7d7;
	background-color:#4c4c4c;
	padding:6px 20px;
	float:left;
	width:100%;
	font-weight:normal;
	clear:both;
	cursor: pointer;
}
.globe-medals-widget .globe-medals-nav:hover,.globe-medals-widget .globe-medals-nav.selected{
	color:white;
}
.globe-medals-widget .globe-medals-nav td{
	vertical-align: middle;
	padding-right:4px;
}
.globe-medals-medal{
	display:block;
	width:10px;
	height:10px;
	border-radius:5px;
	-moz-border-radius:5px;
	-webkit-border-radius:5px;
}
.reutersOlympicsWidget section.widgetHeader{
	display:none;
}
.globe-medals-widget .globe-medals-gold span, .globe-medals-widget .globe-medals-silver span, .globe-medals-widget .globe-medals-bronze span{
	float:left;
	margin:2px 2px;
	font-weight: normal;
}
.globe-medals-widget .globe-medals-gold .globe-medals-medal{
	background-color:#f3d100;
	margin-top:6px;
}
.globe-medals-widget .globe-medals-silver .globe-medals-medal{
	background-color:#9aa4ac;
	margin-top:6px;
}
.globe-medals-widget .globe-medals-bronze .globe-medals-medal{
	background-color:#9d5e1a;
	margin-top:6px;
}
.globe-medals-widget .globe-medals-count{
	float:left;
	margin-top: 2px;
}
.globe-medals-widget .globe-medals-plusminus{
	float:right;
	margin: 5px;
	text-transform: uppercase;
}
.globe-medals-widget .reutersOlympicsWidget{
	display:none;
	border-right: 1px solid #dddddd;
	border-left: 1px solid #dddddd;
	margin-top: 0px !important;
	float:left;
}
.reutersOlympicsWidget{
	background-color: white;
	font-size: 12px !important;
	color:#333 !important;
	width:100%;
	margin-bottom:0 !important;
}
.reutersOlympicsWidget .number{
	font-size:12px !important;
}
.reutersOlympicsWidget .label{
	font-size:11px !important;
}
.globe-medals-widget .reutersOlympicsWidget .tabs{
	display:none;
}
.globe-medals-widget .globe-medals-showmore a{
	text-align: center;
	display:block;
	display:none;
	width:100%;
	padding:5px 0;
	color:#969696;
	text-transform: uppercase;
	background-color: white;
	border-left:1px solid #C5C5C5;
	border-right:1px solid #C5C5C5;
	float:left;
	font-size:11px;
	font-weight: bold;
}
html body section.reutersOlympicsWidget article, html body section.reutersOlympicsWidget aside, html body section.reutersOlympicsWidget details, html body section.reutersOlympicsWidget figcaption, html body section.reutersOlympicsWidget figure, html body section.reutersOlympicsWidget footer, html body section.reutersOlympicsWidget header, html body section.reutersOlympicsWidget hgroup, html body section.reutersOlympicsWidget menu, html body section.reutersOlympicsWidget nav, html body section.reutersOlympicsWidget section {
	float:left !important;
	width:100% !important;
}
.reutersOlympicsWidget .totalHeader{
	font-size: 12px !important;
}
.globe-medals-widget .reutersOlympicsWidget .resultsSubview{
	display:none;
}
.globe-medals-widget .reutersOlympicsWidget .resultsSubview2{
	display:block !important;
}
.reutersOlympicsWidget .widgetShowMore{
	font-size: 11px;
	display:none;
}
#page-medals .reutersOlympicsWidget .widgetShowMore{ display:block; }
#page-medals .reutersOlympicsWidget .elongation{
	width:0;
	height:0;
	display: block;
	overflow: hidden;
}
.reutersOlympicsWidget span.medal {
	padding:0 !important;
}
html body section.reutersOlympicsWidget.scheduleWidget section.rcWidgetShowMore button.elongation {
	font-size: 12px !important;
	display:none !important;
}
html body section.reutersOlympicsWidget.medalCountWidget section.widgetBody table.medalCount tr.headerRow td span.medal.gold,html body section.reutersOlympicsWidget.medalCountWidget section.widgetBody table.medalCount tr.headerRow td span.medal.silver,html body section.reutersOlympicsWidget.medalCountWidget section.widgetBody table.medalCount tr.headerRow td span.medal.bronze {
	width:13px !important;
	height:13px !important;
	-moz-border-radius:50%;
	-webkit-border-radius:50%;
}
.emptyMessage{
	margin:15px 0 !important;
}
.totalHeader{
	padding-right: 10px !important;
	border-top:0 !important;
}
html body section.reutersOlympicsWidget.medalCountWidget section.widgetBody table.medalCount tr.headerRow td.number.totalHeader span {
	font-size: 12px !important;
}
html body #page-medals section.reutersOlympicsWidget section {
	float: none !important;
}
#page-medals .rcWidgetShowMore{
	display:none;	
}
#page-medals .tabs{
	display:none;
}
#page-medals .resultsSubview{
	display:none;
}
#page-medals resultsSubview2, html body #page-medals section.reutersOlympicsWidget.scheduleWidget .inactive, html body #page-medals section.reutersOlympicsWidget.resultsConnection .inactive {
	display:block !important;
}
html body #page-medals section.reutersOlympicsWidget.scheduleWidget .constrainHeight {
	max-height:9999px;
	height:auto;
}
html body section.reutersOlympicsWidget.medalCountWidget section.widgetBody table.medalCount tr.medalRow td.label{
	font-weight:normal !important;
	color:black !important;
}
.reutersOlympicsWidget .label{
	display:table-cell !important;
	text-align:left !important;
}
.reutersOlympicsWidget td{
	display:table-cell !important;
}
/* Smartphones -------------------------------*/
@media screen and (max-width: 480px) {
	.globe-medals-widget{
		margin:-5px 0 5px;
	}
	.reutersOlympicsWidget{
		border:0px;
		margin-bottom:10px;
		border-bottom:1px solid #d2d2d2;
		background-color:white !important;
		padding-top: 2px !important;
	}
	.widgetShowMore, .medalCount, .subview{
		background-color:white !important;
	}
	.globe-medals-plusminus{
		margin:5px 0;
	}
	.totalHeader{
		font-size: 10px !important;
	}
}

